formule de calcul position dans le fichier

--- a/templates/projets.html
+++ b/templates/projets.html
@@ -478,6 +478,7 @@
                                     <ul style="margin-top: 5px; padding-left: 20px;">
                                         <li>Score = Somme sur tous les projets [ (Poids du Projet * 2 si Responsable) + (Poids du Projet * 1 si Contributeur) ]</li>
                                         <li>Un professionnel ne compte qu'une fois par projet (la responsabilité prime sur la contribution).</li>
+                                        <li>Forule dans repartition.html aux lignes 391-420.</li>
                                     </ul>
                                 </div>
 
