--- a/templates/revenus.html
+++ b/templates/revenus.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Ajout de Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+    <!-- Authentication -->
+    <script type="module" src="../js/auth.js"></script>
 </head>
 <body>
     <div class="container">
