--- a/templates/rcpmeeting.html
+++ b/templates/rcpmeeting.html
@@ -263,7 +263,7 @@
                     <li><a href="projets.html"><i class="fas fa-tasks"></i> Projets & Missions</a></li>
                     <li><a href="repartition.html"><i class="fas fa-chart-pie"></i> Répartition</a></li>
                     <li><a href="parametres.html"><i class="fas fa-cog"></i> Paramètres</a></li>
-                    <li><a href="/login.html" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+<li><a id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
                 </ul>
             </nav>
         </div>
