--- a/templates/projets.html
+++ b/templates/projets.html
@@ -399,8 +399,8 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="logo">
-                <h1>MSP Gestion</h1>
+            <div class="logo" style="background-color: #2c3e50;">
+                <img src="/assets/favicon.ico" alt="Logo MSP" style="height: 20px; margin-right: 10px;"><h1>MSP Gestion</h1>
             </div>
             <nav>
                 <ul>
